@@ -2,6 +2,9 @@
 
 	Fixed kind of a duplicate of first history element on =.
 
+	Fixed displaying size for symbolic links to directories on changing views
+	and determining whether they point to a directory in custom views.
+
 0.8.1 to 0.8.1a
 
 	Added c key to menus that inserts parts of menu line into command-line.
